# tutorial_web

./: .gitignore  .travis.yml  Cargo.toml  USAGE.md  example_course.yml  index.html  readme.md
.github/workflows/: audit.yml  format_check.yml  gh-pages.yml  release.yml
ci/: before_deploy.sh  script.sh
course/example/demonstrating_assets/: index.html
course/example/urls/: index.html
course/python/python_introduction/: index.html
courses/example/: demonstrating_assets.yml  demonstrating_urls.yml
courses/python/: introduction.yml
src/: build.rs  cli.yml  common.rs  main.rs  parse.rs  templates.rs  web.rs
src/parse/: macros.rs
static/: main.css
templates/: base.html  course.html  home.html  tutorial.html
