[package]
name = "tutorial_web"
version = "0.1.1"
authors = ["Louis de Wardt <contact@louis.dewardt.uk>"]
edition = "2018"

[dependencies]
askama = { version = "0.8", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
pulldown-cmark = "0.6"
actix-web = "1.0"
actix-files = "0.1.6"
env_logger = "0.7.0"
clap = "2.33.0"
walkdir = "2"
