[package]
name = "tutorial_web"
version = "0.1.10"
authors = ["Louis de Wardt"]
edition = "2018"

[dependencies]
askama = { version = "0.8", features = [] }
pulldown-cmark = "0.6"
actix-web = "1.0"
actix-files = "0.1.6"
env_logger = "0.7.0"
clap = { version = "2.33", features = ["yaml"] }
walkdir = "2"
yaml-rust = "0.4"
itertools = "0.8.1"
